--- a/june-chat-server/pom.xml
+++ b/june-chat-server/pom.xml
@@ -16,6 +16,20 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>9.0.52</version>
+        </dependency>
+    </dependencies>
+
 
 
 </project>
